--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <!--HTML file auto generated using EmulatorJS codehelper-->
     </head>
     <body>
-        <div style="width:640px;height:480px;max-width:100%">
+        <div style="width:100%px;height:100%px;max-width:100%">
             <div id="game"></div>
         </div>
         <script>
@@ -15,6 +15,6 @@
             EJS_pathtodata = "https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/";
             EJS_gameUrl = "Mortal Kombat II (USA) (Rev 1).sfc";
         </script>
-        <script src="https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/loader.js"></script>
+        <script src="https://www.emulatorjs.com/loader.js"></script>
     </body>
 </html>
